update the config file structure

--- a/config.json
+++ b/config.json
@@ -1,31 +1,85 @@
 {
   "name": "http-server",
   "version": "1.0.0",
-  "author": "",
-  "maxBodySize": 10485760,
-  "timeout": 30000,
   "servers": [
     {
-      "serverName": "default",
-      "host": "172.0.0.1",
+      "host": "127.0.0.1",
       "ports": [8080],
+      "serverName": "localhost",
+      "defaultServer": true,
+      "timeout": 30000,
+      "maxBodySize": 1048576,
       "errorPages": {
-        "404": "/errors/404.html",
-        "500": "/errors/500.html"
+        "404": "/error/404.html",
+        "500": "/error/500.html"
       },
       "routes": [
         {
           "path": "/",
-          "methods": ["GET", "POST"],
+          "methods": ["GET", "DELETE"],
+          "root": "./www/html",
           "index": "index.html",
-          "root": "./www",
+          "directoryListing": true,
+          "uploadPath": "./www/uploads"
+        },
+        {
+          "path": "/uploads",
+          "methods": ["GET", "POST", "DELETE"],
+          "root": "./www/uploads",
+          "directoryListing": false,
+          "uploadPath": "./www/uploads"
+        },
+        {
+          "path": "/old-page",
+          "root": "./www/uploads",
+          "methods": ["GET", "POST", "DELETE"],
           "redirectTo": "/new-page"
         },
         {
-          "path": "/blog",
-          "methods": ["POST", "DELETE"],
+          "path": "/cgi-bin",
+          "root": "./www/scripts",
+          "methods": ["GET", "POST"],
+          "cgiExtension": ".py"
+        }
+      ]
+    },
+    {
+      "host": "127.0.0.1",
+      "ports": [8080],
+      "serverName": "localhost1",
+      "timeout": 30000,
+      "maxBodySize": 1048576,
+      "errorPages": {
+        "404": "/error/404.html",
+        "500": "/error/500.html"
+      },
+      "routes": [
+        {
+          "path": "/",
+          "methods": ["GET", "DELETE"],
+          "root": "./www/html",
           "index": "index.html",
-          "root": "./www"
+          "directoryListing": true,
+          "uploadPath": "./www/uploads"
+        },
+        {
+          "path": "/uploads",
+          "methods": ["GET", "POST", "DELETE"],
+          "root": "./www/uploads",
+          "directoryListing": false,
+          "uploadPath": "./www/uploads"
+        },
+        {
+          "path": "/old-page",
+          "root": "./www/uploads",
+          "methods": ["GET", "POST", "DELETE"],
+          "redirectTo": "/new-page"
+        },
+        {
+          "path": "/cgi-bin",
+          "root": "./www/scripts",
+          "methods": ["GET", "POST"],
+          "cgiExtension": ".py"
         }
       ]
     }
