--- a/config.json
+++ b/config.json
@@ -8,37 +8,12 @@
       "serverName": "localhost",
       "defaultServer": true,
       "maxBodySize": 1048576,
-      "errorPages": {
-        "404": "/error/404.html",
-        "500": "/error/500.html"
-      },
       "routes": [
         {
           "path": "/",
-          "methods": ["GET", "DELETE"],
-          "root": "./www/html",
-          "index": "index.html",
-          "directoryListing": true,
-          "uploadPath": "./www/uploads"
-        },
-        {
-          "path": "/uploads",
-          "methods": ["GET", "POST", "DELETE"],
-          "root": "./www/uploads",
-          "directoryListing": false,
-          "uploadPath": "./www/uploads"
-        },
-        {
-          "path": "/old-page",
-          "root": "./www/uploads",
-          "methods": ["GET", "POST", "DELETE"],
-          "redirectTo": "/new-page"
-        },
-        {
-          "path": "/cgi-bin",
-          "root": "./www/scripts",
-          "methods": ["GET", "POST"],
-          "cgiExtension": ".py"
+          "methods": ["GET"],
+          "root": "./www",
+          "index": "index.html"
         }
       ]
     }
