--- a/config.json
+++ b/config.json
@@ -62,16 +62,16 @@
       ]
     },
     {
-      "host": "127.0.0.2",
-      "ports": [8080],
+      "host": "127.0.0.1",
+      "ports": [8081],
       "serverName": "localhost",
       "maxBodySize": 104857600,
       "routes": [
         {
           "path": "/",
-          "methods": ["GET", "DELETE"],
-          "root": "./www",
-          "index": "index.html"
+          "root": "./www/scripts/cgi-3.py",
+          "methods": ["GET", "POST"],
+          "cgiExtension": "py"
         }
       ]
     }
