--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
       "routes": [
         {
           "path": "/",
-          "methods": ["GET", "DELETE"],
+          "methods": ["GET", "DELETE", "POST"],
           "root": "./www",
           "index": "index.html"
         },
@@ -50,7 +50,7 @@
           "redirectStatusCode": 302
         },
         {
-          "path": "/upload",
+          "path": "/uploads",
           "methods": ["POST"],
           "root": "./www/uploads"
         },
@@ -69,7 +69,7 @@
       "routes": [
         {
           "path": "/",
-          "methods": ["GET", "DELETE"],
+          "methods": ["GET", "POST", "DELETE"],
           "root": "./www",
           "index": "index.html"
         }
